--- a/app/Resources/views/FrontEnd/terms.html.twig
+++ b/app/Resources/views/FrontEnd/terms.html.twig
@@ -8,7 +8,7 @@
                 <div class="col-md-12 text-center">
                     <div class="about_title">
                         <h2>Terms &amp Conditions</h2>
-                        <img src="../images/shape.png" alt="">
+                        <img src="{{ asset('images/shape.png') }}" alt="">
                             <div class="terms-just">
                                 <h3 class="header-terms">General Terms and Conditions</h3>
                                 <p>
@@ -176,7 +176,7 @@
                                        <br> Suite D0500,
                                        <br> 3rd Floor 207 Regent St. Mayfair,
                                        <br> London W1B 4ND, United Kingdom,
-                                       <br> Email: support@relaxst.com
+                                       <br> Email: support@finsensitive.com
                                        <br> Phone: +(420)775412797
                             </p>
                             </div>
