--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,9 +51,9 @@
 	                <div class="collapse navbar-collapse" id="navbar-collapse"> <!--id="bs-example-navbar-collapse-1">-->
 	                  <ul class="nav navbar-nav navbar-right">
 	                    <li><a href="{{ path('index') }}" onclick = $("#menu-close").click(); >Home</a></li>
-                            <li><a href="#ABOUT" onclick = $("#menu-close").click(); >About</a></li>
-	                    <li><a href="#SERVICE" onclick = $("#menu-close").click(); >Services</a></li>
-	                    <li><a href="#TESTIMONIAL" onclick = $("#menu-close").click(); >Testimonial</a></li>
+                            <li><a href="{{ path('index') }}#ABOUT" onclick = $("#menu-close").click(); >About</a></li>
+	                    <li><a href="{{ path('index') }}#SERVICE" onclick = $("#menu-close").click(); >Services</a></li>
+	                    <li><a href="{{ path('index') }}#TESTIMONIAL" onclick = $("#menu-close").click(); >Testimonial</a></li>
                             <li><a href="{{ path('terms') }}" onclick = $("#menu-close").click(); >Terms &amp Conditions</a></li>
                             <li><a href="{{ path('privacy') }}" onclick = $("#menu-close").click(); >Privacy Policy</a></li>
                             <li><a href="{{ path('unsubscribe') }}" onclick = $("#menu-close").click(); >Unsubscribe</a></li>
@@ -96,16 +96,13 @@
             <div class="row">
                 <div class="col-md-3  wow fadeInLeft animated">
                     <div class="single_contact_info">
-                        <h2>Call Me</h2>
-                        <p>+88 00 123 456 01</p>
-                    </div>
-                    <div class="single_contact_info">
-                        <h2>Email Me</h2>
-                        <p>Hello@abdullahnoman.com</p>
+                        <h2>Email Us</h2>
+                        <p>support@finsensitive.com</p>
                     </div>
                     <div class="single_contact_info">
                         <h2>Address</h2>
-                        <p>216 Street Address, Barisal, BD</p>
+                        <p> 3rd Floor 207 Regent St. Mayfair,</p>
+                        <p> London W1B 4ND, United Kingdom,</p>
                     </div>
                 </div>
                 <div class="col-md-9  wow fadeInRight animated">
@@ -159,7 +156,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="copyright_text   wow fadeInUp animated">
-                        <p>&copy; brandy 2015.All Right Reserved By <a href="http://www.themeforest.net/user/thecodecafe"target="_blank">Code Cafe Team</a></p>
+                        <p>&copy; Finsensitive.com.All Right Reserved</p>
                         <p>Made with love for creative people.</p>
                     </div>
                 </div>
