--- a/app/Resources/views/FrontEnd/index.html.twig
+++ b/app/Resources/views/FrontEnd/index.html.twig
@@ -87,7 +87,7 @@
                 <div class="col-md-12 text-center">
                     <div class="about_title">
                         <h2>About Us</h2>
-                        <img src="../images/shape.png" alt="">
+                        <img src="{{ asset('images/shape.png') }}" alt="">
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 <div class="col-md-12 text-center">
                     <div class="about_title">
                         <h2>Our Services</h2>
-                        <img src="../images/shape.png" alt="">
+                        <img src="{{ asset('images/shape.png') }}" alt="">
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                 <div class="col-md-12 text-center">
                     <div class="work_title  wow fadeInUp animated">
                         <h1>Latest of what we do</h1>
-                        <img src="../images/shape.png" alt="">
+                        <img src="{{ asset('images/shape.png') }}" alt="">
                         <p>Before you decide to join our premium finance advisory club, have a look below at some of our latest topics</p>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
             <div class="row">
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="../images/w1.jpg" alt="">
+                        <img src="{{ asset('images/w1.jpg') }}" alt="">
                         <div class="image_overlay">
                             <a href="#HOME">Subscribe for more</a>
                             <h2>Binary Options Trading</h2>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="../images/w2.jpg" alt="">
+                        <img src="{{ asset('images/w2.jpg') }}" alt="">
                         <div class="image_overlay">
                             <a href="#HOME">Subscribe for more</a>
                             <h2>Singals &amp Robot Trading</h2>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="../images/w3.jpg" alt="">
+                        <img src="{{ asset('images/w3.jpg') }}" alt="">
                         <div class="image_overlay">
                             <a href="#HOME">Subscribe for more</a>
                             <h2>Real Estate Investing</h2>
@@ -230,7 +230,7 @@
             <div class="row pad_top">
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="../images/w4.jpg" alt="">
+                        <img src="{{ asset('images/w4.jpg') }}" alt="">
                         <div class="image_overlay">
                             <a href="#HOME">Subscribe for more</a>
                             <h2>Commodities Trading</h2>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="../images/w5.jpg" alt="">
+                        <img src="{{ asset('images/w5.jpg') }}" alt="">
                         <div class="image_overlay">
                             <a href="#HOME">Subscribe for more</a>
                             <h2>Online earnings & wealth management</h2>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image last_padding">
-                        <img src="../images/w6.jpg" alt="">
+                        <img src="{{ asset('images/w6.jpg') }}" alt="">
                         <div class="image_overlay">
                             <a href="#HOME">Subscribe for more</a>
                             <h2>Modern Option Trading</h2>
@@ -268,7 +268,7 @@
                 <div class="col-md-12 text-center">
                     <div class="work_title  wow fadeInUp animated">
                         <h1>Testemonials</h1>
-                        <img src="../images/shape.png" alt="">
+                        <img src{{ asset('images/shape.png') }}" alt="">
                     </div>
                 </div>
             </div>
