--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -156,8 +156,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="copyright_text   wow fadeInUp animated">
-                        <p>&copy; Finsensitive.com.All Right Reserved</p>
-                        <p>Made with love for creative people.</p>
+                        <p>&copy; Mediaff.com. All Right Reserved</p>
                     </div>
                 </div>
             </div>
