--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -100,9 +100,10 @@
                         <p>support@finsensitive.com</p>
                     </div>
                     <div class="single_contact_info">
-                        <h2>Address</h2>
-                        <p> 3rd Floor 207 Regent St. Mayfair,</p>
-                        <p> London W1B 4ND, United Kingdom,</p>
+                        <h2>Address:</h2>
+                        <p> Mediaff Ltd </p>
+                        <p> Kemp House, 160 City Road </p>
+                        <p> London EC1V 2NX, United Kingdom </p>
                     </div>
                 </div>
                 <div class="col-md-9  wow fadeInRight animated">
